--- a/Html web assignment/Assignment.html
+++ b/Html web assignment/Assignment.html
@@ -154,6 +154,7 @@
                      and NodeJS in back-end development, and it is useful for building high-end single-page applications,<br>
                       like the Plaid app. </p>
             <img src="/Images/mern stack.png" class="center1" >
+            <p>Hello i am a paragraph</p>
 
         <h2>Difference between MEAN and MERN stacks:</h2>
                 <table class="center2">
